fixed the contact form by aligning it side by side

--- a/style.css
+++ b/style.css
@@ -278,11 +278,18 @@ flex-basis: 60%;
 }
 
 /*   <!--------------CONTACT SECTION------------------->*/
+.container01 {
+    display: flex;
+    justify-content: space-between;
+}
+
 .contact-left{
     flex-basis: 35%;
+    padding: 0 20px;
 }
 .contact-right{
     flex-basis: 60%;
+    padding-right: 100px;
 }
 .contact-left p{
     margin-top: 30px;
